# mcp-servers

./: .gitignore  README.md
apple-notes-mcp/: .gitignore  README.md  pyproject.toml
apple-notes-mcp/src/apple_notes_mcp/: __init__.py  bridge.py  content.py  scripts.py  server.py
apple-reminders-mcp/: README.md  pyproject.toml
apple-reminders-mcp/src/apple_reminders_mcp/: __init__.py  bridge.py  scripts.py  server.py
