[project]
name = "apple-notes-mcp"
version = "0.1.0"
description = "MCP server for reading and writing Apple Notes via AppleScript"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lucas Relva" }]
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
apple-notes-mcp = "apple_notes_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_notes_mcp"]
