[project]
name = "apple-reminders-mcp"
version = "0.1.0"
description = "MCP server for reading and writing Apple Reminders via AppleScript/JXA"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lucas Relva" }]
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
apple-reminders-mcp = "apple_reminders_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_reminders_mcp"]
